feat: mapping error for http and grpc
