# task2/api_gateway/docs/swagger.json
@@ -43,16 +43,28 @@
                             "$ref": "#/definitions/github_com_Friend-zva_golang-course-task2_api_gateway_dto_driving.GetInfoRepoOutput"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found\" example(\"\")",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_controller_http.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Internal Server Error\" example(\"\")",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_controller_http.ErrorResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway\" example(\"1\")",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http.ErrorResponse"
+                        }
+                    },
+                    "504": {
+                        "description": "Gateway Timeout\" example(\"12\")",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http.ErrorResponse"
                         }
                     }
                 }
@@ -82,6 +94,15 @@
                 "name": {
                     "type": "string",
                     "example": "golang-course"
+                }
+            }
+        },
+        "internal_controller_http.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "repo 'go-course' not found"
                 }
             }
         }
