# task2/api_gateway/internal/controller/http/get_inforepo.go
@@ -1,9 +1,11 @@
 package http
 
 import (
+	"errors"
 	"net/http"
 
 	"github.com/Friend-zva/golang-course-task2/api_gateway/dto/driving"
+	"github.com/Friend-zva/golang-course-task2/api_gateway/internal/domain"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 )
@@ -16,8 +18,10 @@ import (
 // @Param owner path string true "GitHub username or organization name" example("suvorovrain")
 // @Param repo path string true "Repository name" example("golang-course")
 // @Success 200 {object} driving.GetInfoRepoOutput "Successful response with repository info"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
+// @Failure 404 {object} ErrorResponse "Not Found"
+// @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Failure 502 {object} ErrorResponse "Bad Gateway"
+// @Failure 504 {object} ErrorResponse "Gateway Timeout"
 // @Router /{owner}/{repo} [get]
 func (h *Handler) GetInfoRepo(w http.ResponseWriter, r *http.Request) {
 	input := driving.GetInfoRepoInput{
@@ -27,7 +31,15 @@ func (h *Handler) GetInfoRepo(w http.ResponseWriter, r *http.Request) {
 
 	output, err := h.infoRepo.GetInfoRepo(r.Context(), input)
 	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		var appErr *domain.AppError
+		if errors.As(err, &appErr) {
+			render.Status(r, int(appErr.Code))
+			render.JSON(w, r, ErrorResponse{Error: appErr.Message})
+			return
+		}
+
+		render.Status(r, http.StatusInternalServerError)
+		render.JSON(w, r, ErrorResponse{Error: "internal server error"})
 		return
 	}
 
