# task2/api_gateway/internal/controller/http/handler.go
@@ -4,6 +4,10 @@ import (
 	"github.com/Friend-zva/golang-course-task2/api_gateway/internal/usecase"
 )
 
+type ErrorResponse struct {
+	Error string `json:"error" example:"repo 'go-course' not found"`
+}
+
 type Handler struct {
 	infoRepo *usecase.InfoRepo
 }
