# task2/api_gateway/internal/controller/http/not_found.go
@@ -1,9 +1,14 @@
 package http
 
-import "net/http"
+import (
+	"net/http"
+
+	"github.com/go-chi/render"
+)
 
 func (h *Handler) NotFound(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusNotFound)
-	w.Write([]byte(`{"error": "Endpoint not found. Check /swagger/index.html for available routes"}`))
+	render.Status(r, http.StatusNotFound)
+	render.JSON(w, r, ErrorResponse{
+		Error: "Endpoint not found. Check /swagger/index.html for available routes",
+	})
 }
